test/invalid-semantics/57163_assertion_not_comparison/assertion_not_comparison.mag
-- Author: 57163, Guilherme Dias

fun recursive (n) : Int -> Int =
	if n = 0 then 0 else recursive(n-1)
